# pdf-layout-translator

./: .env.example  .env.local.example  .env.openai.balanced  .env.openai.min-cost  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark_layout_candidates.py  cleanup_expired.py  init_db.py  smoke_pdf_model.py  smoke_reference_pdf.py
src/pdf_translator/: __init__.py  config.py  db.py  openrouter.py  pdf_pipeline.py  schemas.py  worker.py
src/pdf_translator/api/: main.py
src/pdf_translator/bot/: telegram_bot.py
tests/: conftest.py  test_billing_api.py  test_cleanup_script.py  test_health.py  test_job_flow.py  test_job_guards.py  test_version.py
